・三権分立 ・政教分離 ・整理

--- a/Network/なんかよくわからんメモ.md
+++ b/Network/なんかよくわからんメモ.md
@@ -1,84 +1,4 @@
-# 用語まとめ
-
-## レイテンシ
-
-latency : 潜伏、潜在
-
-潜伏時間、潜時、待ち時間、反応時間とは、デバイスに対してデータ転送などを要求してから、その結果が返送されるまでの不顕性の高い遅延時間のこと。
-データ転送における指標のひとつで、転送要求を出してから実際にデータが送られてくるまでに生じる、通信の遅延時間のことをいいます。
-この遅延時間が短いことをレイテンシが小さい（低い）、遅延時間が長いことをレイテンシが大きい（高い）と表現しています。
-
-パッと思いつく事として、伝送遅延があるけど、それだけがレイテンシではない模様。
-あくまで、要求を出してから送られてくるまでの時間なので、複数の要因が存在する。
-
-### ネットワークにおける遅延（レイテンシ）
-
-[ネットワークにおける遅延（レイテンシ）](https://gist.github.com/hatappo/224c8160c72c1f7649f947caf7fe615a)
-ここが一番参考になる。
-gitでページが飛んでほしくないので、マルコピする。
-
-#### 参考
-
-- [ネットワークの世界における遅延とは](https://www.apposite-tech.com/blog/%e3%83%8d%e3%83%83%e3%83%88%e3%83%af%e3%83%bc%e3%82%af%e3%81%ae%e4%b8%96%e7%95%8c%e3%81%ab%e3%81%8a%e3%81%91%e3%82%8b%e9%81%85%e5%bb%b6%e3%81%a8%e3%81%af/)
-- [ネットワークでなぜ遅延が生じるのか](https://www.slideshare.net/junkato1272/ss-70431661)
-
-#### ネットワークにおける遅延の種類
-
-##### １．アプリケーション遅延 Processing Delay
-
-通信機器の入力IFから出力IFのキューへ到達するまでにかかる時間。
-
-``` txt
-`（通信機器の）入力IF`
-    から
-`（通信機器の）出力IFキュー`
-    に入るまでにかかる時間
-```
-
-比較的単純なPing/ICMPエコーリクエストなどのアプリケーションでは、このアプリケーションによる遅延は、マイクロ秒単位。 一秒間で数万件の株式の取引が行われる、コンピュータによる「高頻度取引(HFT)」の世界でも無い限り（ナノ秒単位の遅延が問題になるそうです）、アプリケーション遅延は無視されることが多い。
-
-アプリケーションが複雑になってくれば、アプリケーション遅延も大きくなる。
-
-##### ２．輻輳遅延 Queueing Delay
-
-通信機器の出力IFキューに入ってから出力処理を行うまでにかかる時間。 通信機器がデータを転送するためにパケットをバッファに保持している時間。
-
-``` txt
-`（通信機器の）出力IFキュー`
-    に入ってから
-`（通信機器の）出力IFキュー`
-    を出るまでにかかる時間
-```
-
-ある回線上に、その回線の帯域幅以上のパケットが到達してしまった場合、ネットワーク上のルータ(またはスイッチ)は、超過したパケットをバッファに溜め込みます。そのバッファを更に超過した場合、パケットは破棄されます。
-
-広帯域回線から狭帯域回線への転送、一時的な輻輳などのためにこのバッファが存在する。
-
-##### ３．伝送遅延 Serialization Delay
-
-通信機器の出力IFからパケットを電気信号や光信号に変換して送信完了するまでにかかる時間。
-
-``` txt
-`（通信機器の）出力IFのデータ`
-    を
-`電気信号や光信号`
-    に変換するのにかかる時間
-```
-
-・広帯域回線では短く、狭帯域回線では長い。 ・パケットのサイズが大きいと長く、サイズが小さいと短い。
-
-1,500バイトのパケットの送出にかかる時間は ・10GE では 1.2 マイクロ秒 ・64Kbps(ISDN) では 187.5 ミリ秒（約１９万マイクロ秒）
-
-##### ４．伝搬遅延 Propagation Delay
-
-パケットが通信経路上を伝わるのにかかる時間。 （通信機器上で発生する遅延ではない）
-光ファイバの伝搬速度は約２０万km/秒。（真空中だと光の速度は約３０万km/秒。）
-
-- 東京〜⼤阪間 500km 往復 5ミリ秒
-- ⽇本〜アメリカ⻄海岸 海底ケーブル 9,000km 往復 90ミリ秒
-- ⼈⼯衛星 静⽌軌道 上空36,000km 2往復 500ミリ秒
-
----
+# なんかよくわからんメモ
 
 ●ARP
 IPアドレスからMACアドレスを取得するためのプロトコルなのは分かったが、どのような場面で使うのかイメージできなかった。
@@ -200,9 +120,6 @@ L2,L3スイッチなどが持つ転送機能、経路制御機能を倫理的に
 Switch、Router、FW、LB等のネットワーク専用機器ごとに仮想化する考え方。
 専用機器をサーバー上の仮想マシンで動くソフトウェアとして実装する。
 
-・勉強 : オフセット,RTS/CTS,ARP
-
-
 ●オフセット
 位置を基準点からの距離で表した値のこと。
 「えっとね～。ここを基準にしてね～。こっちにこれだけズラしたのが今の場所だよ」な位置の表し方のこと
@@ -276,9 +193,6 @@ HTTPS : Hyper Text Transfer Protocol Secure Socket Layer Transport Layer Securit
 
 ARPの使用イメージがわかない。
 どのときんい使うものなんだ？
-
-
-・勉強 : POP3,IMAP,ISDN,ADSL,ｽﾊﾟﾆﾝｸﾞﾂﾘｰ等
 
 
 ●POP3 : Post Office Protocol Ver3
@@ -558,11 +472,6 @@ UDP
 ●L4スイッチ、L7スイッチ
 
 
-
-    
-・勉強 : TCP/IPプロトコルスイート
-
-
 ●TCP/IPプロトコルスイート
 ・プロトコルにはプロトコル自体の相性がある。
 ・なのでプロトコルはセットで使われることが多い。
@@ -592,8 +501,6 @@ IP,ICMP
 物理層
 
 
-・勉強 : プロトコルとサービス
-
 ●プロトコルとサービス
 OSI基本参照モデルの続き。
 ・それぞれの階層をN層と呼ぶ
@@ -614,11 +521,6 @@ Transmission→伝送
 まぁ、伝送制御ってことか。
 気を付けるのはTransportって言いそうになることだな。
 トランスポートではなくトランスミッションな。
-
-・勉強 : OSI基本参照モデル
-
-JSNINJAを進めるには時間が足りなさ過ぎたので、応用情報から適当に勉強することにしました。
-取り合えずネットワークの復讐をば。
 
 ●OSI基本参照モデル
 7:アプリケーション層
