--- a/Other/Strategy/ストラテジ系.md
+++ b/Other/Strategy/ストラテジ系.md
@@ -185,3 +185,24 @@ ISO9001は「品質マネジメントシステム」の国際規格です。
 [ISO9001 品質マネジメントシステム（QMS）とは](https://www.securityhonpo.jp/iso9001/about.html)  
 
 ---
+
+## ホラクラシー (Holacracy)
+
+>社内に役職や階級のないフラットな組織形態のことを指します。  
+大きな特徴は、意思決定権が組織内で分散されるということです。  
+それに伴って、責任の所在もそれぞれの部署やチーム、もしくは社員個人に分散されます。  
+それぞれがより大きな裁量をもち、自主的に仕事に取り組めるようになることが期待できます。  
+ホラクラシー型の対義語は、ヒエラルキーです。  
+[ホラクラシー型組織のメリット・デメリット｜ヒエラルキー型との違い](https://www.reloclub.jp/relotimes/article/11136#:~:text=%E3%83%9B%E3%83%A9%E3%82%AF%E3%83%A9%E3%82%B7%E3%83%BC%E3%81%A8%E3%81%AF%E3%80%81%E7%A4%BE%E5%86%85%E3%81%AB,%E5%80%8B%E4%BA%BA%E3%81%AB%E5%88%86%E6%95%A3%E3%81%95%E3%82%8C%E3%81%BE%E3%81%99%E3%80%82)  
+
+## ヒエラルキー (Hierarchie)
+
+>上位・下位関係に整序されたピラミッド型の秩序ないしは組織のことをいう。  
+[コトバンク](https://kotobank.jp/word/%E3%83%92%E3%82%A8%E3%83%A9%E3%83%AB%E3%83%92%E3%83%BC-608459#:~:text=%E3%83%92%E3%82%A8%E3%83%A9%E3%83%AB%E3%83%92%E3%83%BC%E3%81%B2%E3%81%88%E3%82%89%E3%82%8B%E3%81%B2,%E3%81%84%E3%82%8B%E3%81%A8%E3%81%84%E3%82%8F%E3%82%8C%E3%81%A6%E3%81%84%E3%82%8B%E3%80%82)  
+
+&ensp;
+
+>ヒエラルキー（ドイツ語: Hierarchie、ヒエラルヒー、英語: hierarchy、ハイァラーキ）とは、階層制や階級制のことであり、主にピラミッド型の段階的組織構造のことを指す。  
+元々は、聖職者の支配構造であった。  
+かつてのカトリック教会や正教会などが、この言葉の現代的意味において「階層的な」組織を持っていたことに起源がある。  
+[wiki]  
