整理 ・シングルサインオン、Idp

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -2,23 +2,6 @@
 
 ---
 
-## プラグアンドプレイ(Plug and Play, PnP)
-
-USBとか刺したときにデバイスドライバとか自動的にダウンロードしてくれたりするアレ。  
-単語を知らなかった。恥ずかしい限りである。  
-
-``` txt : wiki
-PCに周辺機器や拡張カード等を接続した際にハードウェアとファームウェア、ドライバ、オペレーションシステム、およびアプリケーション間が自動的に強調し、
-危機の組み込みと設定を自動的に行う仕組みのこと。
-パソコンのユーザービリティ(使い勝手)を向上させる技術の1つ。
-ドライバの自動インストール機能。
-つないだら(plug)、ユーザーが何か特別なことをしなくても実行(play)できる、という意味。
-```
-
-今の時代、刺せば大抵使えるから別に珍しくもなんともないけど、パソコンの黎明期はそうでもなかったんだな。  
-
----
-
 ## ボリュームライセンス
 
 ウィルスバスターのライセンス関係で話題になったのでまとめ。  
@@ -33,26 +16,6 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 購入するのは権利。  
 まとめ買いでお安く。  
-
----
-
-## システムドライブ
-
-「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
-
-``` txt : 一番上に出てくる説明<http://koyocha.blog.fc2.com/blog-entry-29.html>
-オペレーティングシステムがインストールされているハードディスクドライブのこと。
-メーカー製のパソコンでも自作パソコンでも意図して変更しない限りCドライブとなる。
-
-データドライブとはOSがインストールされていないHDDのこと。
-意図して変更しない限りDドライブを含む以降のドライブがこれに当たる。
-
-OSがインストールされているドライブにいくら音楽、動画、画像ファイルやメールなどが入っていようがそれはシステムドライブである。
-```
-
-なんてことはない。これだけの意味だ。  
-ここにSATAが関わるとつまりどういうことを言いたかったのだろうか。  
-単純に遅いってことか？
 
 ---
 
@@ -103,17 +66,18 @@ comroomみたいなものか
 
 ## 表の名称
 
-パターン表
-デシジョンテーブル
-直交表
+パターン表  
+デシジョンテーブル  
+直交表  
 
 ``` txt
-予約        プレーヤー
-キャンセル  全員キャンセル → これが普通
-キャンセル  一部キャンセル → ありえない
-予約        全員キャンセル → あり得る
-予約        一部キャンセル → あり得る
-予約        キャンセルなし → 普通
+予約       | プレーヤー
+-----------+------------------------------
+キャンセル | 全員キャンセル → これが普通
+キャンセル | 一部キャンセル → ありえない
+予約       | 全員キャンセル → あり得る
+予約       | 一部キャンセル → あり得る
+予約       | キャンセルなし → 普通
 ```
 
 ベン図×
@@ -145,72 +109,6 @@ x86Extension
 
 ---
 
-## コントリビューター
-
-オープンソースコミュニティにおける contributor (コントリビュータ) とは「貢献者」という意味で、プロジェクトに何らかの貢献をしてくれた人のことを指します。  
-Apache Project におけるコントリビュータは、JIRA にパッチを投稿したり wiki を編集するなどする人のことを指します。  
-
-※contributor :  
-寄稿者、寄付者、貢献者  
-
-[contributor って何ですか? どうやったらなれますか?](https://qiita.com/shiumachi/items/4dfeebf76c8590268438)  
-
----
-
-## decimal double
-
-[Decimal, Single とDouble の違いについて](https://ja.stackoverflow.com/questions/6711/decimal-single-%E3%81%A8double-%E3%81%AE%E9%81%95%E3%81%84%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6)  
-
-最大の違いは精度です。
-
-- Single 32ビット、仮数23ビット、指数8ビット  
-- Double 64ビット、仮数52ビット、指数11ビット  
-- Decimal 128ビット、仮数96ビット、指数5ビット=10^(-28～0)  
-
-上記のとおりDecimalは指数が10進なので、2進に起因する誤差が発生しません。  
-なのでDBの10進表現や金融計算に利用されます。  
-しかしSingleとDoubleが.NET中間言語のネイティブ型であるのに対して、Decimalはカスタム構造体なのでパフォーマンスが悪いです。  
-
-[double, floatとdecimalの違い](https://www.softel.co.jp/blogs/tech/archives/6101)  
-
-double、float は10進数の小数を2進数の小数で表現した近似値。  
-お金の計算などには使えない。  
-無限小数を有限桁で切ると誤差が出る = double, float。  
-これを掛けたり足したりしていくとやっぱり誤差は出る。  
-
-誤差が出ないように10進数の小数として扱うのがdecimal。  
-
-10進数の0.5は、2進数の0.1  
-（0.5=1/2や0.25=1/4、0.75=3/4などはきれいに表現できる）  
-
-10進数の0.05は、2進数の0.0000110011001100110011001100…  
-（0/2+0/4+0/8+0/16+1/32+1/64+0/128+0/256+1/512+1/1024+… 2進数では無限小数）  
-
-[金額計算（会計処理など）は Decimal 型で、科学計算には Double 型 を使用する](http://vbnettips.blog.shinobi.jp/other/%E9%87%91%E9%A1%8D%E8%A8%88%E7%AE%97%EF%BC%88%E4%BC%9A%E8%A8%88%E5%87%A6%E7%90%86%E3%81%AA%E3%81%A9%EF%BC%89%E3%81%AF%20decimal%20%E5%9E%8B%E3%81%A7%E3%80%81%E7%A7%91)  
-
-``` txt
-データ型 | 型説明             | サイズ   | 有効桁数 | 値の範囲
----------+--------------------+----------+----------+----------------------------------------------------------
-Integer  | 整数型             | 4バイト  | --       | -2147483648 ～ 2147483647
-Long     | 長整数型           | 8バイト  | --       | -9223372036854775808 ～ 9223372036854775807
-Single   | 単精度浮動小数点型 | 4バイト  | 7桁      | -3.40282347E+38 ～ 3.40282347E+38
-Double   | 倍精度浮動小数点型 | 8バイト  | 15桁     | -1.7976931348623157E+308 ～ 1.7976931348623157E+308
-Decimal  | 10進型             | 16バイト | 28桁     | -7.9228162514264337594E+28 ～ 7.9228162514264337594E+28
-```
-
-[大学の講義で教えるために、浮動小数点数 (float 型) の仕組みを学べるアプリを Siv3D で作りました。](https://twitter.com/Reputeless/status/1542160459658416129)
-[浮動小数点数 (float 型) の仕組みを学べるアプリ](https://siv3d.jp/web/sample/IEEE754Float32/IEEE754Float32.html)  
-
----
-
-## モジュールはクラスの代替になるのか？
-
-[第7回 VBのモジュールはオブジェクト指向に不要？](https://atmarkit.itmedia.co.jp/fdotnet/vbcheer/vbcheer07/vbcheer07.html)  
-
-この記事面白いです。
-
----
-
 ## 設計
 
 ---
@@ -222,82 +120,8 @@ Decimal  | 10進型             | 16バイト | 28桁     | -7.92281625142643375
 
 ---
 
-## ブロックチェーン
-
-ブロックチェーンとは、取引履歴を鎖のようにつなげて記録できる技術です。  
-用途として、ネット上でやり取りをおこなうデータの、破壊や改ざんの防止に役立ちます。  
-もともと、仮想通貨「ビットコイン」の基幹技術として開発されたもので、「ネット上の取引履歴を監視できる技術」といえます。  
-
-これからのメタバースの世界では、ユーザーや企業が自由に売買を行い、デジタル資産を所有することになります。  
-このとき、所有したデジタル資産はブロックチェーンによって記録されます。  
-つまり、ブロックチェーン技術があることによって、破壊や改ざんをされる心配なくデジタル資産の売買がおこなえるようになるのです。  
-
-[メタバースって何？メタバースでできること・できるかもしれないことを解説](https://www.shikokubank.co.jp/room/2022/07/metaverse.html#ank3-2)  
-
-## NFT (Non-Fungible Token：非代替性トークン)
-
-[1] <https://www.shikokubank.co.jp/room/2022/07/metaverse.html#ank3-2>  
-ブロックチェーン技術を活用することで生まれたのが、NFT(Non-Fungible Token・ノンファンジブルトークン)です。  
-NFTとは、非代替性トークンと呼ばれ、唯一無二のコピーされないデータ（暗号資産）のことを指します。  
-NFTで注目すべきは、デジタル資産の所有者を明確にできるようになった点です。  
-
-これまで、音楽や画像など、ネット上のデータは所有者を証明できませんでした。  
-いつでもコピーが可能であり、原作の証明や所有権の証明もできなかったのです。  
-ここへNFTの技術を活用することで、「このデータが原作であり、自分がもともとの所有者である」「これは自分が購入したデータで、現在は自分が所有している」といった証明が可能になります。  
-メタバースの世界においては、デジタル資産の価値を証明するものとなります。  
-つまり、NFT技術の誕生によって、ネット上でのデータ売買を安心しておこなえるようになったのです。  
-
-[2] wiki  
-非代替性トークン（ひだいたいせいトークン、英: non-fungible token、略称: NFT）とは、ブロックチェーン上に記録される一意で代替不可能なデータ単位である。  
-NFTは、画像・動画・音声、およびその他の種類のデジタルファイルなど、容易に複製可能なアイテムを一意なアイテムとして関連づけられる。  
-
-※Fungible
-代替可能
-ファンジブル
-
-### NFTと暗号資産は何が違うのか？イーサリアムとの関係は？
-
-NFTと暗号資産の違いは、端的に言えばトークンが代替性か非代替性かどうかということ。  
-暗号資産は、FT（Fungible-Token：代替性トークン）であり、資産個別の識別情報を無視して「〇〇万円分の資産価値を持ったデジタルデータ」として扱うことで、他の暗号資産や現金と交換できる。  
-つまり、暗号資産は代替可能なトークンだ。  
-
-一方、NFTは各作品の識別情報も踏まえて資産価値を与え、他の同等作品とは交換できない唯一無二の存在として扱う。  
-したがって、同じようなデータでもまったく異なるし、その金銭的な価値は相対取引によってのみ決まるケースも多い。  
-芸術作品などとの相性が良いのはこうした理由から。  
-
-[NFTとは何かをマンガでもわかりやすく解説、なぜデジタルデータに数億円の価値が付くのか？](https://www.sbbit.jp/article/fj/60992)  
-
-## メタバース (Metaverse)
-
-[1] wiki  
-メタバース (英: Metaverse) は、コンピュータやコンピュータネットワークの中に構築された、3次元の仮想空間やそのサービスを指す。  
-日本にあっては主にバーチャル空間の一種で、企業および2021年以降に参入した商業空間をそう呼んでいる。  
-
-将来インターネット環境が到達するであろうコンセプト。  
-利用者はオンライン上に構築された3DCGの仮想空間に世界中から思い思いのアバターと呼ばれる自分の分身で参加し、相互に意思疎通しながら買い物や商品の制作・販売といった経済活動を行なったり、そこをもう1つの「現実」として新たな生活を送ったりすることが想定されている。  
-
-## スーパーバイザコール (SVC,supervisor call)
-
-スーパバイザコールとは、プログラムがOSのカーネル部分に処理を依頼するための命令のことである。  
-スーパバイザコールを利用すれば、OSカーネルに処理を依頼することで、タスクを切り替えたり、入出力装置にアクセスしたりすることができるようになる。  
-スーパバイザコールは、パソコンの場合には特にシステムコールと呼ばれることもある。  
-
-## スーパーバイザ 【supervisor】 SV
-
-スーパーバイザとは、監督者、管理者、統括者、指揮者、監修者などの意味を持つ英単語。  
-ITの分野では一般のコンピュータプログラムと退避してオペレーティングシステム（OS）やその中核部分のことをこのように呼ぶことが多い。  
-
----
-
 ・ADFS : ActiveDirectory Federation Service
 ・WAP : Wireless Application Protocol
-
-・SAML : Security Assertion Markup Langage
-・IdP : ID Provider
-リバースプロキシ型などのSSOに相当。認証担当。
-
-・SP : Service Provider
-認証方式がSAMLに対応したWebサーバー。Office365等のクラウドサービス。
 
 ・OpenID
 認証情報のみ提供
@@ -305,12 +129,6 @@ ITの分野では一般のコンピュータプログラムと退避してオペ
 ・OAuth
 facebookでログインのあれ。
 ID認証+コンテンツそのものを提供
-
-●シングルサインオン
-1つでログインしたら他でもログインできる。
-おれは1つ1つのサイトで登録してるから、技術を避けているようなものか。
-Googleの認証1つで他のサイトもいける仕組みはなんていうのだろうか。
-あれこそSMALというのだろうか。
 
 ---
 
@@ -462,6 +280,8 @@ gc.collect
 
 [C# の Web アプリで async/await を使わないとどれくらい性能劣化するか見てみよう(.NET Framework編)](https://zenn.dev/okazuki/articles/async-sync-webapi-dotnetfw)  
 
+モジュールはクラスの代替になるのか？  
+[第7回 VBのモジュールはオブジェクト指向に不要？](https://atmarkit.itmedia.co.jp/fdotnet/vbcheer/vbcheer07/vbcheer07.html)  
 
 
 最初の実行から条件が駄目なので実行はされない。
