・Linqとは ・デリゲートとは ・AzureDevOps ・整理

--- a/Other/Strategy/ストラテジ系.md
+++ b/Other/Strategy/ストラテジ系.md
@@ -19,30 +19,30 @@ ITの浸透が人々の生活をあらゆる面でより良い方向に変化さ
 
 ## DevOps(デブオプス)
 
-ソフトウェア開発手法の一つ。開発 (Development) と運用 (Operations) を組み合わせたかばん語であり、  
-開発担当者と運用担当者が連携して協力する（さらに両担当者の境目もあいまいにする）開発手法をさす。  
-開発者と運用者の境界線を撤廃し、提供するサービスの品質を向上させようというのがDevOpsの考え方。  
-ソフトウェアを迅速にビルドおよびテストする文化と環境により、確実なリリースを、以前よりも迅速に高い頻繁で可能とする組織体制の構築を目指している。  
+ソフトウェア開発手法の一つ。  
+開発 (Development) と運用 (Operations) を組み合わせた造語。  
+開発担当者と運用担当者が連携して協力する（さらに両担当者の境目もあいまいにする）開発手法。  
 
-<https://www.buildinsider.net/enterprise/devops/01>  
-ソフトウェア開発(Develop)と運用(Operetion)を組み合わせた一連のプラクティスで、システム開発のライフサイクルを短縮し、ソフトウェア品質の高い継続的デリバリー(CD:Continuous delivery)を実現することを目的としている。  
+>開発チーム、テストチーム、運用チームといったチームわけの垣根をなくし、開発から運用までをチーム全員が責任を持つということです。  
+[忙しい人のためのAzure DevOps【前編】](https://tech-blog.cloud-config.jp/2020-12-15-azure-devops-for-busy-people/#note2)  
 
-はぁ・・・？  
-まぁいつものごとく抽象的ですね。  
-つまり、開発側と運用側が協力して迅速にサービスを届けられるようにしましょうという改善活動全般をDevOpsという呼び方にしただけらしい。  
-協力するためのアレコレが書かれているが、うーん。ウチでは無理かな!  
+[DevOpsとはなんだ](https://qiita.com/saito_ry/items/394316684da750aba3f3)  
 
-・アジャイルとの違いは？  
-アジャイルは開発手法。運用側の事は考えてない。  
-小さな変更を短いサイクルでリリースするやり方ね。  
-ウォーターフォールみたいに上から下まで時間がかかるやり方に対して生み出された手法。  
+### アジャイルとの違い
 
-・継続的デリバリーとの違いは？  
+アジャイルは開発手法。  
+運用側の事は考えてない。  
+
+### 継続的デリバリーとの違い  
+
 継続的デリバリーとは、全ての変更を本番環境にデプロイ可能な状態（＝いつでも本番リリースが可能な状態）を保証していることを意味する。  
-その前に継続的デプロイメントがあって、全ての変更が自動的に本番環境にデプロイされていることを意味する。コミットをトリガーとして自動的にビルドとテスト（ここが継続的）が行われ、自動的に本番環境にデプロイされるということである。  
+その前に継続的デプロイメントがあって、全ての変更が自動的に本番環境にデプロイされていることを意味する。  
+コミットをトリガーとして自動的にビルドとテスト（ここが継続的）が行われ、自動的に本番環境にデプロイされるということである。  
 その前に継続的インテグレーションがあり、バージョン管理システムにソースコードをコミットしたタイミングで自動的にソースコードのビルドとテストを実行することで、問題がないかをできるだけ早期に検出する。  
 その根本にバージョン管理システムがある。  
 なのでDevOpsとはあまり関係ない。  
+
+---
 
 ## Kubernetes + DXについて
 
