--- a/Technology/ソフトウェア.md
+++ b/Technology/ソフトウェア.md
@@ -87,3 +87,16 @@ IT資産の管理や稼動状況の把握、定型業務の自動化、セキュ
 ## NotePM
 
 社内Wiki
+
+---
+
+## Azure DevOps
+
+Microsoft が提供しているDevOpsを支援するプロジェクト管理サービス。  
+5つのサービスに別れている。  
+
+- Azure Boards : タスク管理  
+- Azure Pipelines : CI/CD (継続的インテグレーション/継続的デリバリー)  
+- Azure Repos : ソースコード等のバージョン管理システム  
+- Azure Test Plans : テスト項目の管理  
+- Azure Artifacts : 外部パッケージとの連携  
