・mermaid ・整理 ・twitterの記事まとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -343,3 +343,117 @@ curlってwindowsにも入ってるのな。
 laravel ディレクトリ構造
 
 [フルテキストインデックス]
+
+<https://twitter.com/jinji_990/status/1556393338232016896>  
+<https://twitter.com/syukatsu_1111/status/1556091895675162624>  
+<https://twitter.com/syukatsu_1111/status/1560409897996816384>  
+
+<https://twitter.com/bto/status/1557875570859720704>  
+
+<https://twitter.com/_coco_007/status/1558574315242921984>  
+
+
+増田 亨
+[設計](https://speakerdeck.com/masuda220/she-ji-falsekao-efang-toyarifang?slide=7)
+https://speakerdeck.com/masuda220
+
+
+
+HTTPステータスコードの覚え方:
+1XX: ちょっと待て
+2XX: ほらよ
+3XX: あっちに行きな
+4XX: お前が悪い
+5XX: 俺が悪い
+<https://twitter.com/mootastic/status/1552274373096407040>  
+
+
+若手のITエンジニアが足りない問題、本当にエンジニアが足りないんじゃなくて
+
+・基本的な情報工学の知識があり
+・自分で考えて問題を発見できて
+・トラブルがあっても黙って抱え込まずにちゃんと報連相できて
+・勉強や向上心があり
+・コミュニケーションスキルがある
+
+人が足りないって感じ
+<https://twitter.com/hiyoko_taisa/status/1552095409992245248>  
+
+
+自分は昔はER図やクラス図を描いて設計していた。経験を積んでくると、初期の設計はいつも間違えることを発見した。初期の設計の改善を続ける効果に気がついた。
+それからは簡単なスケッチを描いたあとは、とっととコードを書いて、コードから図を自動生成しながら設計改善を続けるようになった。
+<https://twitter.com/masuda220/status/1552076717883150336>  
+
+
+>自分は「強いエンジニアさえ集めれば開発は上手くいく」と思ったけど、全然そんなことないと最近感じる。
+いるに越したことないけど、開発体制や組織体制が良くないと開発は上手くいかない。
+もうなんかスポーツみたいだな。
+ワールドクラスのFWを11人集めても勝てない的な。
+<https://twitter.com/pospome/status/1549384413586329605>  
+
+
+>職場で我慢して我慢して徐々にフラストレーションが溜まって、結局、最後に爆発して怒る人がいるけど、（俺もやったことあるけど、）あれ、やらない方がいいよね。傍から見ると、唐突にキレられてるようにしか見えないし、我慢する前に色々できたんじゃないかとも思うし。お互いあんまり良いことない。
+<https://twitter.com/MUGI1208/status/1549875407842725888>  
+
+
+エンジニアの転職理由なんて、「飽きた」「疲れた」「ムカついた」の3つどれかか全部やろ。
+<https://twitter.com/kuromitsu_ka/status/1548909105406164992>  
+
+
+>エンジニア界隈こんな30代多い
+「仕事？まぁ満足してます。でもこれ以上責任は増えなくていっス。会社？まぁ不満あるけど転職するほどでもないっス。趣味？特にないっス。休みの日？ゲームかアニメか動画観てますね。彼女？ずっといません。結婚？したくない訳ではないけどもう自分には無理っスよ。」
+<https://twitter.com/TETRA_IT/status/1548605577936666624>  
+
+
+>こちらで登壇します。金融機関の基幹システムを.NET Frameworkから.NET 6にリプレースするにあたり、どう顧客を説得して、どう移行を計画して、どう炎上したか、すべてお話します！
+参加お待ちしています！
+<https://twitter.com/nuits_jp/status/1549159717544415232>
+
+[APIbank an AOS company](https://www.apibank.jp/ApiBank/api?category_no=0)  
+
+品質落ちる→契約厳しくなる→効率落ちる→技術力あがらない  
+品質が悪くなると「設計書」をきちんと「テストのエビデンス」「進捗管理」を徹底→効率落ちる  
+品質が悪いまま効率が落ちる→朝9時から夜11時まで仕事、土曜日も仕事→勉強の時間はない。  
+勉強しないと技術力上がらない。→技術力上がらないと品質上がらない。→品質上がらないと最初に戻る。  
+[勉強会に参加しないと不幸になる話](https://nowokay.hatenablog.com/entry/20131117/1384684046)  
+
+
+[ネットワークエンジニアとは 〜 仕事/業務内容、何をするのか 〜](https://infrastructure-engineer.com/network-engineer-business-001/)
+
+
+有能なプログラマ「この実装をするなら、この辺とこの辺を考慮しないと・・・。書いてみたけど、この辺も考慮が必要だった。あ、これもだ。」  
+無能なプログラマ「この実装をするのね。書いてみたよ、完了。」  
+<https://twitter.com/shuji_w6e/status/1548104739157524484>  
+
+
+ずっと職業としてエンジニアって仕事してたんだけど、ハードソフト問わず純粋に技術的課題に向かってる時って楽しいんですよ。
+仕事辛いなぁと思うのはほぼ政治要因
+あとどうやってもできない子の教育も辛い。先生ではないので教える能力は無い。
+<https://twitter.com/izumin21504115/status/1544633927184175104>
+
+
+あんまり勉強をせず、高卒で就職した知人に「銃とか爆弾って個人で作れるもんなの？」と聞かれたので
+「銃とか爆弾に限らず、およそ大抵のものは『作ろう！』という気持ちさえあれば、個人で作れる。工学部を出てるか、専門知識があるか、といった要素はあまり関係ない。作る気持ち次第だ」と答えた
+<https://twitter.com/kaitou_ryaku/status/1547497690358943745>  
+
+
+学問をやる最大のメリットは、「世界は自分程度の頭では到底理解しきれないほど複雑怪奇なもので」「それで一向に構わない」ということを身をもって知ることだと思う。この体験がない人間は自分が無知で無力であることに耐えられないので、簡単に正解を与えてくれるカルトや陰謀論にあっさり騙される  
+<https://twitter.com/saegusa01/status/1547353586295746560>  
+
+
+>宗教は初手が「信じる」だけど、科学は初手が「疑う」なので、もうこの時点で勝敗はついている。  
+一方、技術はいいぞ、初手が「祈る」だからな。  
+<https://twitter.com/ito_yusaku/status/1547114321846890496>
+
+
+1000列のテーブルがあったときにcount(列１)とcount(列1000)で20倍違うよという話。まじでー  
+<https://twitter.com/noborus/status/1546983997322203136>  
+
+
+[React 時代に選ぶ GraphQL](https://oisham.hatenablog.com/entry/2022/07/11/033508)  
+
+[大規模アプリのVue3アップデート対応知見まとめ](https://zenn.dev/yodaka/articles/84dc716de1d349)  
+
+[組織づくりやマネジメントについての雑記](https://note.com/insidesales_job/n/nc8bf04c10f3b)  
+
+[システム設計入門](https://github.com/donnemartin/system-design-primer/blob/master/README-ja.md)  
