--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -457,3 +457,15 @@ HTTPステータスコードの覚え方:
 [組織づくりやマネジメントについての雑記](https://note.com/insidesales_job/n/nc8bf04c10f3b)  
 
 [システム設計入門](https://github.com/donnemartin/system-design-primer/blob/master/README-ja.md)  
+
+
+>手を拘束すると、意味を処理する脳活動と言語化の速度が低下する。  
+手が拘束されると、左脳の頭頂間溝と下頭頂小葉の活動が弱まり、言葉の意味処理が阻害されたのです。  
+このことから、何かを説明するときについつい体や手が動いてしまうのはしょうがないことだと分かります。  
+むしろ、身振りや手振りがあるときこそ、その人の脳は盛んに活動していると言えるでしょう。  
+人間の脳は、身体の動きを含めて言葉の意味を記憶している可能性が高いのです。  
+[IT業界人はなぜインタビューでろくろを回すのか？　手を拘束すると言語化速度が低下することが判明！](https://nazology.net/archives/113627)  
+
+twitterで見つけたこういうリンクもまとめたいのだが・・・  
+いかんせん、やりたいことが多すぎてそんな暇はない。  
+
