・Node.js ・Electron ・その他

--- a/Other/社会学.md
+++ b/Other/社会学.md
@@ -43,6 +43,7 @@
 まぁなんにしてもろくでもないことにしかならないのでダメなんだ。  
 
 [首相官邸キッズ](https://www.kantei.go.jp/jp/kids/sanken_sanken.html)  
+[twitter](https://twitter.com/ha_na_ka_ra200/status/1548252046717235201)  
 
 ---
 
