・SIer、オフショア、ニアショアについて

--- a/Other/健康・精神.md
+++ b/Other/健康・精神.md
@@ -40,3 +40,7 @@
 ひたすらスマホ、SNSを惰性で見るのは逆にコントロールされている。  
 「運動」はこの悪影響を断ち切る特効薬。  
 <https://twitter.com/hosomacho1/status/1559496784275439617>  
+
+---
+
+[プログラマの心の健康](https://www.hyuki.com/kokoro/)  
