・タスクスケジューラ参考追加 ・PHPトレイト少しまとめ

--- a/Other/ノウハウ.md
+++ b/Other/ノウハウ.md
@@ -35,3 +35,11 @@ Googleドキュメントでファイルを書き出す方法
 
 1. ファイル→ダウンロード  
 2. 書き出したい形式を選択  
+
+---
+
+## タスクスケジューラ application experience
+
+古いHDDのPCで起動時、HDD使用率が100%になる問題をある程度軽減できるというツイートを見かけたので、まとめる。  
+
+[マコトのおもちゃ箱　～ぼへぼへ自営業者の技術メモ～](http://piyopiyocs.blog115.fc2.com/blog-entry-480.html)
