リンク追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -494,3 +494,9 @@ laravel ディレクトリ構造
 >
 >自分は苦労して手に入れた。それを簡単に人に渡してしまったら、自分の分が目減りしてしまうし、他の人は自分よりも簡単に先へ行ってしまう。そんなバカを見るのはいやだ……そういう気持ちが、奥深くにあるという意味です。あなたがそうだと言ってるわけじゃありませんよ。私の話です。
 <https://twitter.com/hyuki/status/1536257574164606977>
+
+
+https://www.publickey1.jp/blog/22/xamarin202451net_maui.html
+https://zenn.dev/mayuki/articles/64f86fbc1d3da0
+
+[金融の基幹システムを1年半かけて.NET 6に移行した話](https://zenn.dev/nuits_jp/articles/2022-08-26-migration-to-net6)
