--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -1,52 +1,5 @@
 # プログラミングに関するメモ
 
-## static
-
-### そもそもstaticって結局何なのか？  
-
-[C#初心者のための基礎！staticスタティックの意味と使い方を解説#25](https://anderson02.com/cs/cskiso/cskisoniwari-25/)  
-
-staticはインスタンスを生成しない。  
-staticはプログラム実行時にメモリ領域が確保される。  
-なので、そのアプリケーションにただ1つだけ生成したい時に使用される。  
-staticの用途としては、最初に1回定義したら後は変更されないような情報になるので、データベース接続情報などが適している。  
-
-※インスタンスを生成するということはヒープ領域から領域を拝借するのだから、  
-1回だけということはサイズは決まっているので、おそらくスタック領域に展開されるはず。  
-
-### staticクラスのメンバーにthisでアクセスできないのはなぜなのか？  
-
-[staticメソッド内でstaticでないメンバを参照できない理由](https://shirakamisauto.hatenablog.com/entry/2015/06/15/181428)  
-
-thisは自分自身のインスタンスを参照する命令。  
-staticはインスタンスを生成しないのは①でやった通り。  
-インスタンスが存在しないのだから、自分自身のインスタンスにアクセスできるわけがないので、staticクラスでthisは使えない。  
-
-### その他
-
-[staticクラス、staticメソッドの意味と利点](https://teratail.com/questions/174252)  
-インスタンス毎に返す値が違うならstaticでないほうがいいし、Mathのsqrtのように誰がどう計算してもそうなるしかないものはstaticであるほうがいい。  
-なぜならインスタンス毎に挙動が変わって欲しくないし、そういう共通で使う処理は起動時に一回だけメモリに確保して、いつでも使えるようにしたほうが効率がいいし、  
-いちいちnewしてメモリを確保する手間がいらない。  
-
-[わい、static変数とstaticメソッドについて熱く語る](https://qiita.com/Nekonecode/items/19f3a261a8391853ddec)  
-
----
-
-## アンチパターン (anti-pattern)
-
-[wiki_アンチパターン](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%B3%E3%83%81%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3)
-[分かりそう](https://wa3.i-3-i.info/word19389.html)  
-
-システム開発とかにおける「これは悪い意味で定番だよね」な内容をまとめたもの。  
-「あ～、それって一見すると良く見えるかもしれないけどさ～。それをやると、まず間違いなく悪い結果になるんだよね～。でも、よくやっちゃうよね～」なやり方を何となくパターン化してまとめたもの  
-
-デザインパターンはアンチパターンの反対語。  
-設計における「経験豊富な人だったら、こうするだろうね」なノウハウをまとめた定石集。  
-
-デザインパターン : やったほうがいいことまとめ  
-アンチパターン : やらないほうがいいことまとめ  
-
 ---
 
 ## タイプセーフ(型安全)
@@ -117,21 +70,6 @@ Wikiの説明がいちいち面白い。
 >インタプリタ言語なら実行時にコンパイルしてたりする。  
 >Buildは製品としてデプロイ可能な状態にすること（コンパイル、テスト、パッケージング等）  
 >と習ったかなぁ・・・  
-
----
-
-## Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？
-
-[Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？](https://qiita.com/sengoku/items/fb4948e0d2746e3cc26f)  
-
-- UWPで要件を満たせるのであれば[UWP]  
-- Webに慣れた開発者が多ければ[Electron]か[React Native]  
-- iOS/Android向けアプリも一緒に開発するなら[Xamarin]か[React Native]  
-- そうでなければ[WPF]一択  
-
-WPFを選択した場合、.NET Framework 4.7/4.8にするか、.NET Core 3にするのかも選ばなければいけません。  
-将来的なサポートやテストしやすさを考えれば、.NET Core 3から.NET 5へと続く道へ。  
-リリースが間近か、現在ある資産をどうしても手放せないのであれば、.NET Framework 4.7/4.8でしょうか。  
 
 ---
 
@@ -254,29 +192,25 @@ var test = function() {}
 
 ## ストリーム
 
-[ストリームとは | IT用語辞典 e-Words](https://e-words.jp/w/%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%A0.html)  
-
 >ストリームとは、小川、流れ、連続などの意味を持つ英単語で、ITの分野では連続したデータの流れや、データの送受信や処理を連続的に行うことなどを意味する。  
 >プログラミングの分野では、データの入出力全般を扱う抽象的なオブジェクトやデータ型を意味する場合が多い。  
 >データが出入りする何らかの対象（メモリ領域やファイル、ネットワークなど）をプログラム中で扱えるように抽象化したもので、接続や切断、書き込みや読み込みなどを簡易な操作で行うことができる。  
+[ストリームとは | IT用語辞典 e-Words](https://e-words.jp/w/%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%A0.html)  
 
-[ストリーム | Programming Place Plus　用語集](https://programming-place.net/ppp/contents/glossary/sa/stream.html)  
-
+<!--  -->
 >プログラミングにおいて、連続するデータの入出力を行うための抽象的なオブジェクトのことです。  
 >「ストリーム（stream）」とは「流れ」のことであり、データを入出力する様子を、データが流れているように見立てたものです。  
 >入力であればデータの入力元となる存在（キーボードやファイル、ネットワークなど）、出力であればデータの出力先となる存在（ディスプレイやファイル、ネットワークなど）をプログラム中で区別なく扱えるように抽象化したオブジェクトのことです。  
 >データの入力時には入力用のストリーム（入力ストリーム）を通し、データの出力時には出力用のストリーム（出力ストリーム）を通します。  
+[ストリーム | Programming Place Plus　用語集](https://programming-place.net/ppp/contents/glossary/sa/stream.html)  
 
 ---
 
 ## セマフォ
 
-<https://e-words.jp/w/%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9.html#:~:text=%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9%E3%81%A8%E3%81%AF%E3%80%81%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF%E3%81%A7,%E3%82%92%E8%A1%A8%E3%81%99%E5%80%A4%E3%81%AE%E3%81%93%E3%81%A8%E3%80%82>
-
-``` txt
-セマフォとは、コンピュータで並列処理を行う際、同時に実行されているプログラム間で資源（リソース）の排他制御や同期を行う仕組みの一つ。
-当該資源のうち現在利用可能な数を表す値のこと。
-```
+>セマフォとは、コンピュータで並列処理を行う際、同時に実行されているプログラム間で資源（リソース）の排他制御や同期を行う仕組みの一つ。  
+当該資源のうち現在利用可能な数を表す値のこと。  
+[e-words](https://e-words.jp/w/%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9.html#:~:text=%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9%E3%81%A8%E3%81%AF%E3%80%81%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF%E3%81%A7,%E3%82%92%E8%A1%A8%E3%81%99%E5%80%A4%E3%81%AE%E3%81%93%E3%81%A8%E3%80%82)  
 
 セマフォを資源を使っているかどうか、その状態を表す信号機のようなものだと認識していたが、  
 本来は並列処理がメインの概念みたいだ。  
@@ -330,3 +264,44 @@ C#ではデフォルトでやってくれるやつはないので自分で実装
 シリアライズとデシリアライズでやる方法もあるか。  
 
 ソースはシャローコピーのdst側を千葉県ってやってもsrcの値はそのままになるだけだから省略するよ。  
+
+---
+
+## 命名規則
+
+[命名規則(キャメルケース, パスカルケース, スネークケース, ケバブケース)](https://www.wakuwakubank.com/posts/804-it-naming-convention/)  
+
+### キャメルケース( camelCase ) or ローワーキャメルケース
+
+`currentUserItem`  
+
+- 先頭の要素語( current )は小文字で書き始めます。  
+- 先頭以外の要素語( user item )の最初を大文字で書き始めます。  
+- ローワーキャメルケースともいいます。  
+
+- PHPやjsなどの関数で使われることが多い  
+
+### パスカルケース( PascalCase ) or アッパーキャメルケース
+
+`CurrentUserItem`  
+
+- 要素語( current user item )の最初を大文字で書き始めます。  
+- アッパーキャメルケースともいいます。
+
+### スネークケース( snake_case )
+
+`current_user_item`  
+
+- アンダースコア で要素語( current user item )を連結します。  
+
+- 定数はすべて大文字。例:BLOG_CATEGORY  
+- DBなどで扱われる値に使用されることが多い  
+
+### ケバブケース( kebab-case )
+
+`company-id`,`blog-catefgory`  
+
+- ハイフン で要素語( current user item )を連結します。
+
+- HTMLのclass名  
+- ファイル名等  
