・SDGs、要撃、遊撃 ・整理

--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -8,8 +8,6 @@
 2 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」  
 3 処理するのがむずかしいこと。また、そのさま。一大事。  
 
----
-
 ### 「難儀やなぁ」の意味  
 
 主に、関西弁で他人の体験に同情、共感するなどした場合に「大変だねえ」という意味で用いられる表現。  
@@ -110,13 +108,13 @@
 
 たぶん「こもり」  
 
-[「小盛」の読み方って？？](https://oshiete.goo.ne.jp/qa/1223481.html)  
 >推測なのですが、  
 >「大皿」「小皿」、「大声」「小声」、「大柄」「小柄」、「大雨」「小雨」のように、  
 >「大」を「おお」と読むときは「小」は「こ」と読み、  
 >「大吉」「小吉」、「大規模」「小規模」、「大腸」「小腸」のように  
 >「大」を「だい」と読むときは「小」は「しょう」と読むことが多いような気もします。（違う例があったらすみません）  
 >この方式でいくと、「大盛り」は「おおもり」なので「小盛り」は「こもり」になるのではないでしょうか。  
+[「小盛」の読み方って？？](https://oshiete.goo.ne.jp/qa/1223481.html)  
 
 ---
 
@@ -138,6 +136,25 @@
 
 ## 敷衍 (ふえん)
 
-[google]  
 《名・ス他》  
 意味のわかりにくい所を、やさしく言い替えたり詳しく述べたりして説明すること。
+[google]  
+
+---
+
+## 遊撃(ゆうげき)
+
+あらかじめ攻撃する目標を定めず、戦況に応じて敵の攻撃や味方の援護に回ること。  
+[goo]  
+
+---
+
+## 要撃(要撃)
+
+《名・ス他》  
+敵の来るはずの所に待ち受けていて、攻撃を加えること。  
+[google]  
+
+［名］(スル)待ち伏せて攻撃すること。  
+航空自衛隊の用語で、迎え撃つこと。インターセプト。  
+[goo]  
