--- a/Strategy/メモ.md
+++ b/Strategy/メモ.md
@@ -238,3 +238,28 @@ ISO9001は「品質マネジメントシステム」の国際規格です。
 - フェイスブック  
 - アップル  
 - マイクロソフト  
+
+---
+
+## SDGs (Sustainable Development Goals)
+
+SDGsとは「Sustainable Development Goals（持続可能な開発目標）」の略称。  
+発音は「エス・ディー・ジーズ」  
+「世界中にある環境問題・差別・貧困・人権問題といった課題を、世界のみんなで2030年までに解決していこう」という計画・目標のこと。  
+
+>日本のマスメディアや大企業によるゴリ押し・批判
+SDGsは、アメリカ、中国、ロシア、中東と比べて、石油や天然ガスといったエネルギーの資源を持たない欧州が「自らの劣勢を挽回しよう」という意味合いが強く、誰も反対できないような美しい言葉を並べているが、その恩恵があるのは一部の国だけとなっているという実に巧妙な仕掛けになっている。  
+欧州は脱石炭や脱石油で、天然ガスやメガソーラーを含む太陽光発電を推進しているが、ハイブリッド車で世界一の技術を誇る日本がSDGsなんて進めたところでなんのメリットもなく、むしろメガソーラーによる災害など損をすることの方が多い事態になっている。  
+日本の大手マスメディアは、「世界中の報道機関とエンターテインメント企業に対し、その資源と創造的才能をSDGs達成のために活用するよう促す」ことを目的とした「SDGメディア・コンパクト」に参加しているため、国民や日本企業の99.7%を占める中小企業の関心の実態に合わないメディアによるゴリ押しが凄いことになっている。  
+>
+>マスコミの下側としてもSDGs関連の視聴率は悪いが、『ゼヒモノ』という「実態がなくても取り上げなければいけない。  
+上司の機嫌取りのため、実績作りのために無理やり企画をねじ込む」ような、上層部が決めたゴリ押しすることが決まってるモノである。  
+そのため、「SDGs関連を一生懸命やってるのは、大社員様ばかり。」「少数者、弱者の立場や権利向上をというのなら、俺たち外部スタッフの給与を少しでも上げてくれといいたいね」と皮肉られている。  
+SDGsに関する放送に関わっているスタッフが「持続可能」と言えない過酷な労働の負担になっている。SDGsは一部の人たちのエゴとなっており、他のたちに目には「偽善」に見えており、結局救われるべき弱者は置いてけぼりにされている。  
+[wiki]
+
+wikiの癖に中々痛快である。  
+
+---
+
+## インボイス
