・Dapper Like ・通分・約分 ・vlookup ・インボイス ・整理

--- a/Math/指数・対数.md
+++ b/Math/指数・対数.md
@@ -1,9 +1,20 @@
 # 指数・対数
 
-超基本  
+---
+
+## 超基本
 
 $真数 = 基数(底)^{指数}$  
 $指数 = log_{基数(底)}真数$  
+
+---
+
+## 真数とは？
+
+対数$log_ax$に対して、そのxをいう。  
+a:底  
+x:真数  
+本当にこれだけみたいだ。  
 
 ---
 
@@ -80,3 +91,8 @@ log_{10}4.76は1より小さいとみなせる\\
 0.30102539062<log_{10}2<0.30103309064 \\
 というわけで、0.3010までは同じなので、log_{10}2は0.3010に近似出来た。
 ```
+
+---
+
+[常用対数を普通の電卓だけで計算する方法](https://www.youtube.com/watch?v=d6DXAHZBcbA)  
+[開平方](https://www.youtube.com/watch?v=IsXo2XK13Z8)  
