--- a/Strategy/メモ.md
+++ b/Strategy/メモ.md
@@ -95,20 +95,10 @@ System of 系は設計に関する話ですねー。
 
 ---
 
-## 継続的デリバリー復習
+## CEO (Chief Executive Officer)
 
-継続的デリバリー : 手動。本番環境にデプロイ可能な状態を保証する。沢山デプロイするのは色々不都合がある場合もあるので、手動でデプロイする。
-継続的デプロイメント : 自動。インテグレーションに問題が無かったら自動的にデプロイする。
-コミットするたびなので頻度がヤバい。
-なので継続的デリバリーという概念がある。
-継続的インテグレーション : コミットをトリガーとして、ビルドとテストを実行する。
-バージョン管理:言わずもがな。
-
----
-
-## CEO : Chief Executive Officer
-
-会社の経営者（ＣＥＯ）は株主の代理人で、株主から預かった資本で事業を運営し、できるだけ多くの利益をあげるのが仕事。
+会社の経営者のこと。  
+CEOは株主の代理人で、株主から預かった資本で事業を運営し、できるだけ多くの利益をあげるのが仕事。  
 
 ---
 
@@ -131,7 +121,6 @@ System of 系は設計に関する話ですねー。
 
 ## 秘密保持契約 【 NDA (Non-Disclosure Agreement) 】
 
-wiki
 >秘密保持契約（ひみつほじけいやく、（英: non-disclosure agreement、略称: NDA）とは、ある取引を行う際などに、人の間 [^1]で締結する、営業秘密や個人情報など業務に関して知った秘密[^2]を第三者[^3]に開示しない[^4]とする契約。  
 >機密保持契約、守秘義務契約ともいう。  
 >非開示契約とも訳されるが、これは特に、必ずしも本来の秘密でない情報も対象とする場合に用いられる。  
@@ -141,6 +130,7 @@ wiki
 >[^2]: すでに公開済みのものや独自にないし別ソースから入手されたものなどを除外することが多い。  
 >[^3]: 当該取引に関連する関連会社や弁護士、公認会計士などを除外することが多い。  
 >[^4]: 行政庁や裁判所の要求する場合、その他法律上開示義務がある場合などが除外されることが多い。  
+[wiki]  
 
 実務のコードをGitHubとかに挙げて公開するのは駄目だよって話。  
 
@@ -149,6 +139,7 @@ wiki
 ## QA(Quality Assurance)
 
 品質保証のこと。  
+
 Assurance : [名詞] : 保障,保険  
 「アシュランス」と読んでおけば問題なさそう。  
 
@@ -263,3 +254,62 @@ wikiの癖に中々痛快である。
 ---
 
 ## インボイス
+
+>「インボイス」とは、売主が買主に対して発行する請求書や納品書などの書類のことで、「適格請求書」ともいいます。  
+いつ、どこから、何をいくらで購入し、消費税率や消費税がどれだけかかったのかを正確に記載する必要があります。  
+この書類があれば、買主は仕入税額控除を受けることができます。  
+[2023年スタート「インボイス制度」をご存知ですか？今からできる必要な準備とは](https://www.rakurakuhanbai.jp/column/2021/0706.php?gclid=EAIaIQobChMIzsWO7u6I-gIVjX4rCh12xgtkEAAYASAAEgKDDfD_BwE)  
+
+<!--  -->
+>「インボイス」とは、適用税率や税額の記載を義務付けた請求書のことです。  
+「インボイス制度」は、この記載義務を満たした請求書によって消費税を計算し納付しましょうという制度です。  
+現在、消費税率は原則10％ですが、食品や定期購読の新聞などには「8％の軽減税率」が適用されています。つまり、10％と8％の2つの税率があるのです。  
+そこで、商品に課税されている消費税が10％なのか8％なのかを、売り手が買い手に対して伝える必要が出てきます。  
+結果として、商品に課税されている消費税率･消費税額を請求書内で明記する「適格請求書（インボイス）方式」が採用されることになりました。  
+これがインボイス制度が導入されることとなった背景です。  
+適格請求書方式による請求書に基づき、消費税の仕入税額控除を計算し、証拠資料として保存することを「適格請求書等保存方式」と呼びます。  
+[moneyforward](https://biz.moneyforward.com/invoice/basic/48071/)  
+
+- 「インボイス制度」の正式名称は「適格請求書等保存方式」  
+- 2023年（令和5年）10月1日から導入予定。  
+- 「インボイス制度」では、事前に登録した事業者のみがインボイスを発行できる。  
+- 売主は買主から要求されるとインボイスの交付が必要になり、その写しを保存する義務も発生します。
+- 買主側は交付されたインボイスを保存しておき、仕入税額控除の申請に活用します。  
+
+### なぜインボイス制度が必要なのか
+
+#### 税額や税率を明確にする  
+
+2種類の消費税率が平行して運用されている状況にある。  
+現状行っている請求書等保存方式の書類のように総額に対する消費税額だけでは正しい税率かどうかを判断することができない。  
+**品目ごとの購入に対して消費税率と消費税額を明確にする必要**が出てきたため、インボイス制度を導入することになったのが理由のひとつ。  
+
+#### 不正やミスを防ぐ  
+
+2種類の消費税率が混在することにより、消費税額を正確に算出する手間が増える。  
+工数が増えると当然ミスも多くなり、本来の業務の生産性に影響することが懸念される。  
+手間を惜しみ「税率8％のものも含んでいるけど、まとめて10%で良いだろう」などとごまかすと、2％の不当利益を得ることになり、不正につながる。  
+
+### インボイス制度でなにが変わる？
+
+>インボイス制度の導入で、一番の問題となるのが「仕入税額控除」です。  
+消費税計算の中で、預かった消費税から支払った消費税を控除することを「仕入税額控除」と呼びます。  
+仕入税額控除が認められなければ、二重三重に消費税が累積し、税負担が大きくなります。  
+インボイス制度の導入後も仕入税額控除を認めてもらうためには、請求書・領収書の記載内容や保存方法に関して一定の要件を守らなければなりません。  
+[moneyforward](https://biz.moneyforward.com/invoice/basic/48071/)  
+
+---
+
+## 請求書等保存方式
+
+現行の請求書や納品書は「請求書等保存方式」である。  
+総額とそれに対する税額が示されているものを発行・保存する決まり。  
+インボイス制度では品目ごとの税率・税額と事業者登録番号の記載を求められるのに対し、請求書等保存方式にはこれらの記載は必要ない。  
+
+---
+
+## 仕入税額控除
+
+>仕入税額控除とは、生産、流通などの各取引段階で二重、三重に税がかかることのないよう、課税売上に係る消費税額から課税仕入れ等に係る消費税額を控除し、税が累積しない仕組みです。  
+インボイス制度により、インボイスではない請求書では仕入税額控除が受けられなくなります。  
+[moneyforward](https://biz.moneyforward.com/invoice-about/?provider=google&provider_info=ivsystem_gs_ge_kwd-740727884137_&utm_source=google&utm_medium=cpc&utm_campaign=ivsystem_gs_ge_kwd-740727884137_&gclid=EAIaIQobChMIzsWO7u6I-gIVjX4rCh12xgtkEAAYAiAAEgIFdfD_BwE)  
