・PHP改行 ・pub/subまとめ ・整理

--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -142,3 +142,13 @@ New phyrexia
 
 bakedは「焼いた」  
 ベイクドチーズは焼いたチーズ的な意味合い。  
+
+---
+
+## concern
+
+[他動]  
+〔～にとって〕興味がある、重要である  
+
+[名]  
+関心事、懸案事項  
