・Prism.EventAggregatorの実装例 ・過渡期

--- a/DataBase/SQLServer/テーブル構造/列追加.md
+++ b/DataBase/SQLServer/テーブル構造/列追加.md
@@ -40,6 +40,7 @@ BEGIN TRY
         CONSTRAINT TBL_USER_PK PRIMARY KEY CLUSTERED (UserNo)
     )
     -- コメントも必要に応じて入れる
+    EXECUTE sp_addextendedproperty N'MS_Description', N'コード', N'SCHEMA', N'dbo', N'TABLE', N'Src_Table', N'COLUMN', N'Code'
 
     -- ④テンポラリテーブルからバックアップデータを復元
     INSERT INTO TBL_USER
