--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -158,3 +158,16 @@
 ［名］(スル)待ち伏せて攻撃すること。  
 航空自衛隊の用語で、迎え撃つこと。インターセプト。  
 [goo]  
+
+---
+
+## 過渡期【かとき】
+
+>移りかわりの途中の時期。  
+物事の移りかわりの最中で、まだ安定していない時期。  
+[google]  
+
+<!--  -->
+>過渡期とは、物事が移り変わろうとしていく途中の時期のことである。  
+過渡期の「過渡」は、ある状態が新しい状態に変わる途中という意味がある。  
+[weblio]  
