--- a/Strategy/メモ.md
+++ b/Strategy/メモ.md
@@ -232,6 +232,19 @@ ISO9001は「品質マネジメントシステム」の国際規格です。
 
 ---
 
+## BIG4
+
+4つの巨大な会計事務所グループのこと  
+世界４大監査法人グループの名称  
+コンサルティンファーム  
+
+- PwCコンサルティング合同会社(PwC)  
+- EYストラテジー・アンド・コンサルティング  
+- KPMGコンサルティング  
+- デロイト トーマツ コンサルティング（DTC）  
+
+---
+
 ## SDGs (Sustainable Development Goals)
 
 SDGsとは「Sustainable Development Goals（持続可能な開発目標）」の略称。  
