・ASPバージョン ・spi ・整理

--- a/License/SPI/分割払い.md
+++ b/License/SPI/分割払い.md
@@ -45,3 +45,41 @@ E8 / 15
 F3 / 5
 G2 / 3
 H4 / 5
+
+---
+
+## 問題3-1（利子付き）
+
+新しくエアコンを購入する。購入時に価格の何割かを支払い、残額を8回に均等に分割して支払う。  
+このとき、分割手数料として残額の1 / 5を加えた額を8等分して支払うこととなる。  
+
+（1）頭金が購入価格の1 / 5のとき、分割払い1回あたりの支払い額は購入価格のどれだけにあたるか。
+
+分割払いは決定しているので、総額としては [6/5] を支払うことになる。  
+しかし、頭金として [1/5]を支払うので、支払う範囲としては [4/5] となる。  
+分割手数料を含めた金額を8当分するので [1/8 * 6/5] となるが、それを支払う範囲は [4/5] での話になるのでなので、式は以下のようになる、と思われる。  
+
+（4 / 5）×（6 / 5）×（1 / 8）  
+= （24 / 25）×（1 / 8）  
+= 3 / 25  
+
+---
+
+## 問題3-2 (利子付き)
+
+新しくエアコンを購入する。  
+購入時に価格の何割かを頭金として支払い、残額を8回に均等に分割して支払う。  
+このとき、分割手数料として残額の1 / 5を加えた額を8等分して支払うこととなる。  
+
+（2）分割払い1回の支払い額を購入価格の1 /10にするためには、頭金として購入価格のどれだけを支払えばよいか。  
+
+1/10 * 6/5 * 1/8 = 1-x
+
+「分割払い（手数料込み）」に当たる部分は、
+式）[1 / 10] × 8 = [4 / 5]
+
+「分割払い（手数料抜き）」に当たる部分は、
+式）[4 / 5]÷（6 / 5）=[2 / 3]
+
+よって、頭金は購入価格の
+式）[1] - [2 / 3] = [1 / 3] →1 / 3倍の金額となる。
