・分割払い ・参考追加

--- a/License/SPI/メモ.md
+++ b/License/SPI/メモ.md
@@ -19,5 +19,7 @@ WEBテスティングとは、自宅受験型のSPI試験です。
 ## 参考
 
 [saisokuspi.com](https://saisokuspi.com)  
+[spi練習問題.com](https://xn--spi-m54e217p7lcis9d.com/bunkatu-barai-q5/)  
+
 [一般常識一問一答.com](https://jyosiki.com/spi/SPI_WEBtesting.html)  
 [【筆記試験の攻略】転職者向けの筆記試験の定番「SPI3/SPI-G（WEBテスティングサービス）」を見抜け！](https://tenshoku-edge.com/spi3-strategy/#i-11)  
