--- a/License/SPI/分割払い.md
+++ b/License/SPI/分割払い.md
@@ -48,6 +48,82 @@ H4 / 5
 
 ---
 
+## 問題1-1（総額に対する割合）
+
+新しく印刷機を購入する。購入時に総額の1 / 5を支払い、残額を7回に均等に分割して支払う。
+
+（1）分割払いの1回当たりの支払額は総額のどれだけにあたるか。ただし、利子はかからないものとする。
+
+### A1-1
+
+4/5 + 1/7 = 4/35
+
+---
+
+## 問題1-2（総額に対する割合）
+
+新しく印刷機を購入する。購入時に総額の1 / 5を支払い、残額を7回に均等に分割して支払う。
+
+（2）7回の分割払いのうち、3回目の分割払いが済んだ時点における支払済み金額は、総額のどれだけにあたるか。ただし、利子はかからないものとする。
+
+### A1-2
+
+1 - (4/5 * 3/7)
+= 1 - (12/35)
+×
+
+= （1 / 5） + （4 / 35）×3
+= （1 / 5） + （12 / 35）
+= （7 + 12） / 35 （※ 分母を35で通分）
+= 19 / 35
+
+---
+
+## 問題2-1（総額に対する割合）
+
+新しく液晶テレビを購入し、代金は3回に分けて支払うことにした。  
+初回は総額の1 / 6を支払った。  
+
+（1）2回目に総額の3 / 8を支払い、3回目に残額を全て支払うとき、3回目に支払う金額は総額のどれだけに当たるか。  
+ただし、利子はかからないものとする。  
+
+### A2-1
+
+5/6 * 1/3 = 5/18  
+
+3回に分けて支払うってのはフェイク。  
+
+1 - (1/6 + 3/8) で３回目の残額が求められる。  
+= 1 - 13/24  
+= 11/24  
+
+---
+
+## 問題2-2（初回に対する割合）
+
+新しく液晶テレビを購入し、代金は3回に分けて支払うことにした。 初回は総額の1 / 6を支払った。
+
+（2）2回目に初回の2 / 3を支払い、3回目に残額を全て支払うとき、3回目に支払う金額は初回のどれだけに当たるか。  
+ただし、利子はかからないものとする。  
+
+### A2-2
+
+1 - (1/6 + 1/6 * 2/3)
+= 1 - （1 / 6 + 2 / 18）
+= 1 - (3/18 + 2/18)
+= 1 - (5/18)
+= 13/18
+
+初回は総額の1 / 6、3回目は総額の13 / 18であるから、求める割合は、
+
+式）（13 / 18）÷（1 / 6）
+= 13 / 3
+
+初回は初回のペースで6回支払えば良い。  
+３回目のペースで6回
+
+---
+
 ## 問題3-1（利子付き）
 
 新しくエアコンを購入する。購入時に価格の何割かを支払い、残額を8回に均等に分割して支払う。  
@@ -83,3 +159,92 @@ H4 / 5
 
 よって、頭金は購入価格の
 式）[1] - [2 / 3] = [1 / 3] →1 / 3倍の金額となる。
+
+---
+
+## SPI練習問題-問5(分割払い)
+
+購入時にいくらか頭金を払い、総額から頭金を差し引いた残額を6回の分割払いにする。このとき、分割手数料として、残額の10分の1を加える。
+
+[設問１]分割払いの1回の支払い額が購入価格の6分の1になるようにすると、頭金として支払うのは購入価格のどれだけか。
+<https://xn--spi-m54e217p7lcis9d.com/bunkatu-barai-q5/>  
+
+### A
+
+購入価格を1、頭金をNとする。
+
+購入価格1から頭金Nを差し引いた残額は次の通り。
+　残額：1－N ・・・（１）
+
+分割手数料は、残額の10分の1なので、(１)を10分の1した値になる。
+　分割手数料：(1－N)/10 ・・・（２）
+
+よって、実質の残額は、残額(１)に分割手数料(２)を足した金額になる。
+　実質の残額：(1－N)＋(1－N)/10＝(1－N)×(11/10) ・・・（２）
+
+この実質残額を6回払いにするので、6で割ると1回の支払い額が算出できる。
+　1回の支払額＝(1－N)×(11/10)×(1/6) ・・・（３）
+
+そして、分割払いの1回の支払い額が、購入価格の6分の1になるという事なので、次の式が成り立つ。
+
+　分割払いの1回の支払い額 ＝ 購入価格1 × 1/6
+
+この式の左辺に(３)を代入し計算すると求めたいNの額が出てくる。
+
+　(1－N)×(11/10)×(1/6) ＝ 1 × (1/6)
+　(1－N)×(11/10) ＝ 1
+　(11/10)－(11/10)N ＝ 1
+　(11/10)N ＝ (11/10)－1
+　(11/10)N ＝ 1/10
+　N ＝ 1/11
+
+---
+
+## SPI練習問題-問6(分割払い)
+
+ある人がカメラを分割払いで支払いで購入することにした。購入時にいくらか頭金を支払い、総額から頭金を差し引いた残額を6回の分割払いにする。このとき、分割手数料として、残額の1/10を加える。
+
+[設問１]
+頭金として購入価格の1/5を支払った。このとき分割払いの1回の支払い額は購入価格のどれだけにあたるか。
+
+[設問２]
+分割払いの1回の支払い額が購入価格の1/6になるようにすると、頭金として支払うのは、購入価格のどれだけにあたるか。
+
+<https://xn--spi-m54e217p7lcis9d.com/bunkatu-barai-q6/>
+
+### A
+
+購入価格を1、分割1回の支払い金額をNとする。
+
+購入価格1から頭金を差し引いた残額は次の通り。
+　残額：1－(1/5)＝4/5 ・・・（１）
+
+分割手数料は、残額の10分の1なので、(１)を10分の1した値になる。
+　分割手数料：(4/5)×(1/10)＝4/50＝2/25 ・・・（２）
+
+よって、実質の残額は、残額(１)に分割手数料(２)を足した金額になる。
+　実質の残額：(4/5)＋(2/25)＝(20/25)＋(2/25)＝22/25
+
+この実質残額を6回払いにするので、6で割ると1回の支払い額が算出できる。
+　1回の支払額＝(22/25)÷6＝(22/25)×(1/6)＝11/75
+
+よって、分解1回の支払額は、購入価格の11/75となります。
+
+
+前提条件
+購入価格を1、求めたい頭金の額をＮと仮定します。
+
+購入価格1から頭金Ｎを引いた額が残確になるので、残額は次の通りになります。
+残額＝1－Ｎ
+
+次に分割手数料は、残額の1/10。よって、分割手数料次の通りになります。
+分割手数料＝残額×(1/10)＝(1－Ｎ)/10
+
+残額に分割手数料を加えたものが実質の残額になります。よって、実質の残額は次の通りになります。
+実質残額＝残額＋分割手数料
+　　　　＝(1－Ｎ)＋(1－Ｎ)/10
+　　　　＝10(1－Ｎ)/10＋(1－Ｎ)/10
+　　　　＝(10－10Ｎ)/10＋(1－Ｎ)/10
+　　　　＝(10－10Ｎ+1－Ｎ)/10
+　　　　＝(11－11Ｎ)/10
+　　　　＝11(1－Ｎ)/10
