--- a/License/SPI/損益算.md
+++ b/License/SPI/損益算.md
@@ -129,6 +129,25 @@ G = 1400
 = 6240（円）
 ```
 
+``` txt : げてばねこ
+           げ      て      ば
+         原価    定価    売価
+ね値段    300     360      288
+こ個数    200     120       80
+        60000   43200    23040
+
+真面目にやる
+66240 - 60000 = 6240
+
+1個当たりの利益に注目する
+60 * 120 = 7200
+-12 * 80 = -960
+
+6240
+```
+
+<https://www.youtube.com/watch?v=IpZIi7nmDmQ>  
+
 ---
 
 ## 問題8（複数の品物）
@@ -162,7 +181,22 @@ G = 1400
 式）6.72A = 1008
 A = 1008÷6.72
 A = 150（円）
+```
 
+``` txt : げてばねこ
+           げ      て       ば
+         原価    定価     売価
+ね値段      X    1.2X    0.84X
+こ個数    120      72       48
+                                1008
+
+1.2X - X = 0.2X(これが利益)
+0.84X - X = -0.16X(これは損失)
+
+0.2X * 72 = 14.4X
+-0.3X * 48 = -7.68X
+6.72X = 1008
+X = 150
 ```
 
 ---
