ユーザー視点、sql関係

--- a/SystemDesign/設計.md
+++ b/SystemDesign/設計.md
@@ -16,6 +16,25 @@ https://speakerdeck.com/masuda220
 
 ---
 
+## ユーザー視点
+
+［問い］  
+「あなたが開発しているWebシステムを簡単に説明してください」  
+
+［答え1］  
+「私がいま開発しているのは、インターネットで本を売るサイトのためのWebシステムだ。ユーザーが欲しい本の情報を入力すれば、その本の情報（価格、著者、書評）を表示する。また、最近人気のある本を一覧で表示したり、ユーザーごとに関心が高い分野の推奨リストを表示する機能もある。さらに、欲しい本を入れておくショッピングカート機能も用意されている」  
+→  
+このように答えた方は、あくまでユーザー視点で自分が開発しているシステムを見ることができている人。  
+
+［答え2］  
+「私はいま、Strutsのフレームワークを使ってアプリケーション開発をしている。検索エンジンには、商用のミドルウェアを使っている。そのほかの部分はオープンソースを活用し、LAMJで構築したWebシステムだ。機能としては、ユーザー管理、受発注管理、ブック情報管理などがある。季節によって処理データ量に変動があり、場合によっては大量のトラフィックが想定されることから、Webサーバはスケールアウト構成にして拡張できるようになっている。商品の画像データはNFSサーバでコンテンツ管理しており、Webキャッシュの仕組みも使っている」  
+→  
+お分かりの通り、これはシステム開発者の立場に立ってシステムの内部の仕組みを説明する答え方だ。  
+
+[ユーザー視点と開発者視点を使い分けよう](https://www.itmedia.co.jp/im/articles/0805/19/news115.html)  
+
+---
+
 ## コラム
 
 [設計よわよわエンジニアがデザインパターン勉強して「明日もエンジニアがんばろう」と思えるようになった話](https://qiita.com/kamikawa_m/items/e5e807c911ac8c306111#%E3%81%A1%E3%82%87%E3%81%A3%E3%81%A8%E3%81%99%E3%81%94%E3%81%8F%E9%A0%91%E5%BC%B5%E3%81%A3%E3%81%A6%E3%81%BF%E3%81%9F%E7%B5%90%E6%9E%9C)  
