・リンク追加

--- a/SystemDesign/設計.md
+++ b/SystemDesign/設計.md
@@ -33,6 +33,8 @@ https://speakerdeck.com/masuda220
 
 [ユーザー視点と開発者視点を使い分けよう](https://www.itmedia.co.jp/im/articles/0805/19/news115.html)  
 
+[動画紹介「ユーザー視点になりきれないのはなぜか？」](https://uxdaystokyo.com/articles/no_user_perspective/#i)  
+
 ---
 
 ## コラム
