・dispose ・tasker,ifttt

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -398,10 +398,23 @@ using Prism.Events;
 ・実行計画のみかた
 ・TransactionScopeの分散トランザクション
 ・Converterの依存プロパティへの値の設定の仕方をまとめたい。
-・WHEREでCASE WHENを使う方法をまとめたい。
 ・クラス図と関連のまとめ
 ・コマンドまとめ
 ・Laravelになれる。PHPになれる。
+
+---
+
+## wifiと接続されたら電気をつける
+
+・Tasker  
+・IFTTT  
+・SwitchBot  
+・MailTask  
+
+Taskerでwifi接続イベントを検出する。  
+接続イベントに対してTaskerからMailTaskにアクションを送信する。MailTaskで設定しているメールアドレスに特定の形式のメールを送信する。  
+IFTTTで、設定したメールアドレスに対する特定のメールの受信を検知する。  
+イベントを検知したら設定しているSwitchBotに点灯命令を送信する。  
 
 ---
 
