・設計参考追加 ・整理

--- a/Math/とりあえず.md
+++ b/Math/とりあえず.md
@@ -308,3 +308,11 @@ Sn = (n*(s+e))/2
 s : 初項
 e : 末項
 ```
+
+---
+
+## 媒介変数
+
+[a](https://twitter.com/tooooottttteeee/status/1575061303596847105/photo/1)
+
+<https://twitter.com/tooooottttteeee/status/1575061303596847105>
