--- a/HTML/ノウハウ.md
+++ b/HTML/ノウハウ.md
@@ -1,6 +1,8 @@
 # ノウハウ
 
-## これは全案件で必ず書いておくHTML/CSS
+---
+
+## 必ず書いておくHTML/CSS
 
 [これは全案件で必ず書いておくHTML/CSS](https://twitter.com/tak_dcxi/status/1471627450106974215)  
 
@@ -56,9 +58,13 @@
 </style>
 ```
 
+---
+
 ## 文字を中央寄せにする
 
 [左揃えの文字を横幅が自動的に伸縮する中央寄せにする3つの方法](https://www.acky.info/tips/css/00017.html)  
+
+---
 
 ## ブロック要素、インライン要素
 
