・sql format,0埋め ・整理

--- a/DataBase/SQLServer/文字列関係.md
+++ b/DataBase/SQLServer/文字列関係.md
@@ -93,8 +93,7 @@ GROUP BY SlipID
 
 2021/10/12 Tue  
 
-`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('')`だと`ABC202007250541,ABC202007250541,ABC202007250541,`となり、  
-最後にコロンがついてしまうので、消したいなってことでやった。  
+`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('')`だと`ABC202007250541,ABC202007250541,ABC202007250541,`となり、最後にコロンがついてしまうので、消したいなってことでやった。  
 
 STUFF関数なるものを使うことで解決することができた。  
 `STUFF(置換対象文字列、開始位置、終了位置、置換文字)`  
@@ -280,3 +279,29 @@ OR [Field] LIKE '%'+CHAR(13) +'%'
 >検索をする際に、SQLServerでは正規表現を使うことはできません。  
 
 LIKEで色々やるしかないみたい。  
+
+---
+
+## SQLServer 0埋め
+
+RIGHT関数  
+最大桁数（文字数）分の「0」繰り返した文字列を左に付けた値を、右から5桁分切り取る例を以下に記載します。  
+
+``` sql
+-- 右から最大桁数分を切り取る
+-- 00011
+SELECT RIGHT('00000' + CONVERT(NVARCHAR, 11), 5);
+```
+
+FORMAT関数  
+FORMAT関数の第1引数に数値を指定して、第2引数に書式を指定します。  
+FORMAT関数は2012から使用可能。  
+
+``` sql
+-- 1を左0埋めして「00001」にする
+SELECT FORMAT(1,'00000');
+-- 15を左0埋めして「00015」にする
+SELECT FORMAT(15,'00000');
+```
+
+[SQLで左0埋めなどのパディングを行う [SQLServer, MySQL]](https://johobase.com/sql-padding/#:~:text=SQLServer%E3%81%A7%E6%95%B0%E5%80%A4%E3%82%92%E5%B7%A6,%E6%9B%B8%E5%BC%8F%E3%82%92%E6%8C%87%E5%AE%9A%E3%81%97%E3%81%BE%E3%81%99%E3%80%82)  
