--- a/SQL/相関副問合せ.md
+++ b/SQL/相関副問合せ.md
@@ -1,8 +1,10 @@
 # 相関副問合せ(相関サブクエリ)
 
-<https://atmarkit.itmedia.co.jp/ait/articles/1703/01/news187.html>  
-副問合せの文中で、副問合せの外側の属性（検索結果）を利用して検索している問合せを、相関副問合せと呼びます。  
+---
+
+>副問合せの文中で、副問合せの外側の属性（検索結果）を利用して検索している問合せを、相関副問合せと呼びます。  
 一般的には、パフォーマンスは悪くなる見たい。  
+<https://atmarkit.itmedia.co.jp/ait/articles/1703/01/news187.html>  
 
 ``` SQL
 SELECT 社員番号,社員名 FROM 社員 AS S1
