--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -54,8 +54,6 @@ sql where 仕組み
 ・ハッシュとは？
 一方通行の関数ではなく
 
-[Dispose の意味が未だわからないのですが](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=34497&forum=7)  
-
 [C++クラスのメモリ展開アドレス](https://freelifetech.com/class-address-placement/)
 [対数の定義](http://www.geisya.or.jp/~mwm48961/kou2/def_log1.html)  
 [C#に潜むstructの罠](https://techblog.kayac.com/trap-around-struct-in-csharp)  
@@ -116,8 +114,6 @@ sqlserver データベース名 一覧
 [SQL Server でデータベースの一覧を表示する](https://docs.microsoft.com/ja-jp/sql/relational-databases/databases/view-a-list-of-databases-on-an-instance-of-sql-server?view=sql-server-ver15)
 
 
-eventaggregator c# example
-
 at System.Data.SqlClient.SqlConnection.OnError(SqlException exception, Boolean breakConnection, Action`1 wrapCloseInAction)
 End of stack trace from previous location where exception was thrown
 C# スタックトレース　読み方
@@ -144,15 +140,6 @@ DataTemplate
 平米
 
 [フロントエンド開発の３ステップ（npmことはじめ）](https://qiita.com/hashrock/items/15f4a4961183cfbb2658)  
-
-https://e-words.jp/w/CLR.html
-
-sql server 0埋め
-https://teratail.com/questions/40337
-
-C# foreach index
-https://ufcpp.net/blog/2016/12/tipsindexedforeach/
-
 
 名詞とは
 https://ja.wikipedia.org/wiki/%E5%90%8D%E8%A9%9E
@@ -393,3 +380,4 @@ LINQ OrderBy 複数
 〆・フロントはVueで実装したい。
 
 〆・lru
+〆・eventaggregator c# example
