--- a/Windows/.Net/.Net.md
+++ b/Windows/.Net/.Net.md
@@ -51,6 +51,20 @@ Vueの開発の時にCommonLanguageInterfaceと頭文字が同じなので、つ
 
 ---
 
+## CLR (Common Language Runtime : 共通言語ランタイム)
+
+>CLRとは、米マイクロソフト（Microsoft）社がWindowsのプログラム実行環境などとして推進している.NET（ドットネット）で、対応プログラムを実行するための動作環境のこと。  
+同社の.NET Frameworkなどが該当する。  
+
+---
+
+## POCO(Plain Old CLR Object)
+
+メソッドを持たず、プロパティだけ持つ、データを格納するだけが目的のクラス。  
+共通言語ランタイム（Common Language Runtime、CLR）のみに依存するプレーンなオブジェクト。  
+
+---
+
 ## .NET Core  
 
 主にサーバ向けとして登場しその後デスクトップアプリケーションなどにまで範囲を広げたオープンソースのフレームワーク。  
